 Typing focus lost when using any Midas buttons. b=314160 r=josh sr=vlad